# api/user.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"goVueBlog/models"
 	"goVueBlog/service"
 	"goVueBlog/service/serializer"
 	"goVueBlog/utils"
@@ -27,7 +28,7 @@ func NewUserApi() *UserApi {
 // @Summary 用户注册
 // @Tags 用户
 // @Accept json
-// @Param register body object true "注册信息"
+// @Param register body service.RegisterData true "注册信息"
 // @Success 200 {string} userInfo
 // @Router /user/register [post]
 // @Alias: 注册用户
@@ -41,7 +42,20 @@ func (m *UserApi) Register(c *gin.Context) {
 		m.Fail(utils.Response{Code: errmsg.ERROR_USER_NOT_EXIST, Msg: err.Error()})
 		return
 	}
-	token, err := m.Service.CreateUser(&params)
+	if params.Password != params.RePassword {
+		m.Fail(utils.Response{Msg: "二次密码不正确！"})
+	}
+	var registerData models.User = models.User{
+		Username: params.Username,
+		Password: params.Password,
+		Email:    params.Email,
+		Role:     int(params.Role),
+		NikeName: params.NikeName,
+		Gender:   params.Gender,
+		Active:   params.Active,
+	}
+
+	token, err := m.Service.CreateUser(&registerData)
 	if err != nil {
 		m.Fail(utils.Response{Code: errmsg.ERROR_USERNAME_USED, Msg: err.Error()})
 		return
@@ -61,59 +75,37 @@ func (m *UserApi) Register(c *gin.Context) {
 // @Success 200
 // @Router /user/login [post]
 func (m *UserApi) Login(c *gin.Context) {
-	var (
-		json service.LoginRequest
-		data service.ResponseUser
-		code int
-	)
+	var params service.LoginRequest
 
-	if err := c.ShouldBindJSON(&json); err != nil {
-		code = errmsg.ERROR_USERNAME_OR_PASSWORD_WRONG
-		c.JSON(http.StatusOK, gin.H{
-			"code": code,
-			"msg":  errmsg.GetErrMsg(code),
-			"data": data,
-		})
+	if err := m.BindResquest(BindRequestOtpons{Ctx: c, Ser: &params, BindUri: false}).GetError(); err != nil {
+
+		m.Fail(utils.Response{Code: errmsg.ERROR_USERNAME_OR_PASSWORD_WRONG, Msg: err.Error()})
 		return
 	}
 	// 获取数据库中密码
-	user, err := m.Service.GetUserByUsername(json.Username)
-	if err != nil || user == nil {
-		c.JSON(http.StatusOK, gin.H{
-			"code": code,
-			"msg":  errmsg.GetErrMsg(code),
-			"data": data,
-		})
+	user, _ := m.Service.GetUserByUsername(params.Username)
+	if user.Username == "" {
+		m.Fail(utils.Response{Msg: "用户不存在！"})
 		return
 	}
 	// 验证密码是否正确
-	if !utils.CheckPassword(json.Password, user.Password) {
-		c.JSON(http.StatusOK, gin.H{
-			"code": code,
-			"msg":  errmsg.GetErrMsg(code),
-			"data": data,
-		})
+	if !utils.CheckPassword(params.Password, user.Password) {
+		m.Fail(utils.Response{})
 		return
 	}
 
 	// 生成token
-	token, err := utils.GenerateToken(json.Username, int(user.ID))
+	token, err := utils.GenerateToken(params.Username, int(user.ID))
 	if err != nil {
-		c.JSON(http.StatusOK, gin.H{
-			"code": code,
-			"msg":  errmsg.GetErrMsg(code),
-			"data": data,
-		})
+		m.Fail(utils.Response{})
 		return
 	}
-	data.Username = user.Username
-	data.ID = user.ID
-	code = errmsg.SUCCESS
+
 	c.JSON(http.StatusOK, gin.H{
-		"status": code,
-		"msg":    errmsg.GetErrMsg(code),
+		"status": http.StatusOK,
+		"msg":    "ok",
 		"token":  token,
-		"data":   data,
+		"data":   user,
 	})
 }
 
